--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -322,13 +322,16 @@ canvas.radialLoader{
 	padding:0 1em 0 1.5em;
 }
 #clases li .menu{
-	height: 3em;
-	width: 100%;
+	height: 3.5em;
+	width: 3.5em;
+	margin-top: 0.5em;
 	display:block;
 	position:relative;
+	text-align: center;
+	line-height: 4em;
+	z-index:100;
 }
 #clases li .menu i{
-	line-height: 2.2em;
 	color:#000;
 }
 #clases li div{
@@ -516,9 +519,16 @@ html body .ui-btn.ui-btn-a:hover{
 }
 #alumno-lista{
 	font-size:1em;
+	margin:-1em 0;
 }
 #alumno-lista li{
 	padding:0 1em 0 1.5em;
+}
+#alumno-lista li .alumno-detail{
+	height:4.5em; 
+	line-height:4.5em; 
+	font-weight:bolder; 
+	font-size:1em;
 }
 #alumno-lista li .menu{
 	height: 3em;
@@ -535,10 +545,10 @@ html body .ui-btn.ui-btn-a:hover{
 	position:relative;
 	background:transparent;
 }
-.alumno-detail{
+/*.alumno-detail{
 	height:3em;
 	margin-top: 1.5em;
-}
+}*/
 ul#alumno-lista li.header{
 	position:relative;
 	text-align: center;
@@ -580,6 +590,10 @@ ul#alumno-lista li.header .control.next{
 	right:0;
 	padding-right:1.5em;
 }
+/*.menu-container{
+	display:block;
+	width:1.5em;
+}*/
 /* DE ACA PARA ABAJO SOLO ANIMACIONES, KEYFRAMES, ETC */
 /* Chrome, Safari, Opera */
 @-webkit-keyframes leftArrow {
