--- a/platforms/android/assets/www/view/unidad.html
+++ b/platforms/android/assets/www/view/unidad.html
@@ -33,17 +33,19 @@
             <div class="slideIndicator"><i class="fa fa-arrow-right"></i></div>
             <div class="background-clase ejecucion-clase-1 {{#if this.ejecucion}}active {{else}} {{/if}}"></div>
             <div class="background-clase ejecucion-clase-0 {{#if this.ejecucion}} {{else}}active {{/if}}"></div>
-            <div class="col-90">
-                <h3>{{this.nombre}}</h3>
-                <p>
-                    {{this.fechainibonita}} - {{this.fechafinbonita}}<br/>
-                    {{this.horas}} horas
-                </p>
-            </div>
-            <div class="col-10 menu-container">
-                <a href="#{{this.id}}" class="menu">
-                    <i class="fa fa-ellipsis-v fa-2x pull-right"></i>
-                </a>
+            <div class="row">
+                <div class="col-xs-9">
+                    <h3>{{this.nombre}}</h3>
+                    <p>
+                        {{this.fechainibonita}} - {{this.fechafinbonita}}<br/>
+                        {{this.horas}} horas
+                    </p>
+                </div>
+                <div class="col-xs-3 menu-container">
+                    <a href="#{{this.id}}" class="menu pull-right">
+                        <i class="fa fa-ellipsis-v fa-2x"></i>
+                    </a>
+                </div>
             </div>
         </li>
     	{{/.}}
