--- a/platforms/android/assets/www/view/lista-asistencia.html
+++ b/platforms/android/assets/www/view/lista-asistencia.html
@@ -1,8 +1,15 @@
 <ul id="alumno-lista" data-role="listview" data-inset="false">
 	<li class="header" data-role="list-divider" role="heading">
+        {{#if this.prev}}
         <a href="#prev_month" class="control prev"><i class="fa fa-chevron-circle-left"></i></a>
-        <span id="month">Curso</span>
+        {{/if}}
+        <p>
+        	<strong id="month">{{this.curso.nombre}}</strong>
+        	<span>{{this.fecha.formated}}</span>
+        </p>
+        {{#if this.next}}
         <a href="#next_month" class="control next"><i class="fa fa-chevron-circle-right"></i></a> 
+        {{/if}}
     </li>
 {{#each this.alumnos}}
 	{{#.}}
@@ -11,8 +18,8 @@
 			{{this.apellido_paterno}}, {{this.nombre_usuario}}
 		</div>
 		<div class="col-10 menu-container">
-			<a href="#{{this.id}}" class="menu">
-				<i class="fa fa-ellipsis-v fa-2x pull-right"></i>
+			<a href="#{{this.id}}" class="menu asistenciaStatus">
+				<i class="fa {{this.icon}} fa-2x pull-right"></i>
 			</a>
 		</div>
 	</li>
