--- a/platforms/android/assets/www/view/lista-asistencia.html
+++ b/platforms/android/assets/www/view/lista-asistencia.html
@@ -13,7 +13,7 @@
     </li>
 {{#each this.alumnos}}
 	{{#.}}
-	<li data-icon="false">
+	<li data-icon="false" class="{{this.class}}">
 		<div class="col-90 alumno-detail">
 			{{this.apellido_paterno}}, {{this.nombre_usuario}}
 		</div>
