--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -655,7 +655,7 @@ ul#alumno-lista li.header .control.next{
 .presente i.fa{
 	color:#8AE68A !important;
 }
-.ausent i.fa{
+.ausente i.fa{
 	color:#E68A8A !important;
 }
 /*.menu-container{
