--- a/www/view/descargando.html
+++ b/www/view/descargando.html
@@ -1,6 +1,9 @@
 <div id="logoSplash" class="logo">
     <div class="reset" style="position:relative; top:60%; width:180%; margin:0 auto 0 -40%">
         <i class="fa fa-spinner fa-pulse fa-2x"></i>
-        <p style="margin:1em;">Descargando datos desde el servidor, por favor no cierre la aplicación.</p>
+        <p style="margin:1em;">
+        	Descargando datos desde el servidor, por favor no cierre la aplicación.<br/>
+        	<span id="theRoadSoFar">0%</span>
+        </p>
     </div>
 </div>
