--- a/www/view/descargando.html
+++ b/www/view/descargando.html
@@ -3,7 +3,7 @@
         <i class="fa fa-spinner fa-pulse fa-2x"></i>
         <p style="margin:1em;">
         	Descargando datos desde el servidor, por favor no cierre la aplicación.<br/>
-        	<span id="theRoadSoFar">0%</span>
+        	<span id="theRoadSoFar">Comprobando servidor...</span>
         </p>
     </div>
 </div>
