--- a/platforms/android/assets/www/view/home.html
+++ b/platforms/android/assets/www/view/home.html
@@ -1,14 +1,14 @@
 <ul id="eventos" data-role="listview" data-inset="false">
     <li class="headerMes" data-role="list-divider" role="heading">
-        <a href="#prev_month" class="control prev"><i class="fa fa-chevron-circle-left"></i></a>
+        <a href="#prev_month" class="control prev"><i class="fa fa-chevron-left"></i></a>
         <span id="month">Mes año</span>
-        <a href="#next_month" class="control next"><i class="fa fa-chevron-circle-right"></i></a> 
+        <a href="#next_month" class="control next"><i class="fa fa-chevron-right"></i></a> 
     </li>
     {{#each eventos}}
     {{#.}}
         {{#if this.eventos}}
             <li class="header" value="{{this.titulo}}">
-                <div data-role="collapsible">
+                <div data-role="collapsible" data-icon="none" style="border-width:0px;">
                     <h2>{{this.titulo}}</h2>
                     <ul class="eventos" data-role="listview" data-inset="false">
                     {{#each this.eventos}}
@@ -32,6 +32,6 @@
         {{/if}}
     {{/.}}
     {{else}}
-    <li><center><h2>No hay Eventos para mostrar</h2></center></li>
+    <li class="header disabled">No hay Eventos para mostrar</li>
     {{/each}}
 </ul>
