--- a/platforms/android/assets/www/view/planificacion.html
+++ b/platforms/android/assets/www/view/planificacion.html
@@ -1,8 +1,13 @@
-<form class="ui-filterable" data-position="fixed">
-    <input id="filterPlanificacion" type="text" style="display:none;">
+<form id="listUnidades" class="ui-filterable" data-position="fixed">
+    <div id="inputHide">
+        <input id="filterPlanificacion" type="text" style="display:none;">
+    </div>
+    <div id="buscarUnidad">
+        <input class="filterPlanificacion" type="text" data-type="search" placeholder="Buscar">
+    </div>
     <fieldset class="ui-grid-a">
         <div class="ui-block-a">
-            <select class="filterPlanificacion" name="sector">
+            <select class="filterPlanificacion" name="sector" data-icon="false">
                 <option value=" ">Asignatura</option>
             {{#each this.sectores}}
                 {{#.}}
@@ -12,7 +17,7 @@
             </select>
         </div>
         <div class="ui-block-b">
-            <select class="filterPlanificacion" name="nivel">
+            <select class="filterPlanificacion" name="nivel" data-icon="false">
                 <option value=" ">Nivel</option>
             {{#each this.niveles}}
                 {{#.}}
@@ -22,7 +27,6 @@
             </select>
         </div>
     </fieldset>
-    <input class="filterPlanificacion" type="text" data-type="search" placeholder="Buscar">
 </form>
 <div class="clearfix"></div>
 <ul id="unidades" data-role="listview" data-filter="true" data-filter-reveal="false" data-input="#filterPlanificacion">
