--- a/www/view/clase.html
+++ b/www/view/clase.html
@@ -1,29 +1,36 @@
 <div class="container-fluid">
 	<h2>{{nombre}}</h2>
-	<div class="row">
-		<div class="col-xs-3">Profesor</div>
-		<div class="col-xs-3">{{autor}}</div>
-		<div class="col-xs-3">Inicio</div>
-		<div class="col-xs-3">{{fechaBonitaIni}}</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-3">Asignatura</div>
-		<div class="col-xs-3">{{sectorNombre}}</div>
-		<div class="col-xs-3">T&eacute;rmino</div>
-		<div class="col-xs-3">{{fechaBonitaFin}}</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-3">Unidad</div>
-		<div class="col-xs-3">{{unidadNombre}}</div>
-		<div class="col-xs-3">Duración</div>
-		<div class="col-xs-3">{{horas}}</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-3">Nivel</div>
-		<div class="col-xs-3">{{nivelNombre}}</div>
-		<div class="col-xs-3">Validado Por</div>
-		<div class="col-xs-3"></div>
-	</div>
+	<div class="clearfix"></div>
+	<table>
+		<tr>
+			<th>Profesor</th><th>&nbsp;:&nbsp;</th>
+			<td>{{autor}}</td>
+		</tr>
+		<tr>
+			<th>Asignatura</th><th>&nbsp;:&nbsp;</th>
+			<td>{{sectorNombre}}</td>
+		</tr>
+		<tr>
+			<th>Nivel</th><th>&nbsp;:&nbsp;</th>
+			<td>{{nivelNombre}}</td>
+		</tr>
+		<tr>
+			<th>Unidad</th><th>&nbsp;:&nbsp;</th>
+			<td>{{unidadNombre}}</td>
+		</tr>
+		<tr>
+			<th>Inicio</th><th>&nbsp;:&nbsp;</th>
+			<td>{{fechainibonita}}</td>
+		</tr>
+		<tr>
+			<th>T&eacute;rmino</th><th>&nbsp;:&nbsp;</th>
+			<td>{{fechafinbonita}}</td>
+		</tr>
+		<tr>
+			<th>Duración</th><th>&nbsp;:&nbsp;</th>
+			<td>{{horas}}</td>
+		</tr>
+	</table>
 	<div class="row">
 		<p>
 			{{observacion}}
